Add twig code to input and display activity level for an adventure.

--- a/views/admin.html.twig
+++ b/views/admin.html.twig
@@ -25,6 +25,7 @@
                                                 <li>Latitude: {{ place.getLatitude }}</li>
                                                 <li>Longitude: {{ place.getLongitude }}</li>
                                             {% endfor %}
+                                            <li>Activity Level: {{ event.getActivityLevel(activity) }}</li>
                                         </ul>
 
 
