--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container">
-
+            <a href="/santiago">Santiago</a>
         </div>
     </body>
 </html>
