--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -17,9 +17,16 @@
             <div class="main">
 
                 {% for action in adventures %}
-                    <a href=""<div class="adventure_box">
-                        {{ action.getName() }}
-                    </div>
+                    <a href="/adventure/{{ action.getId }}"><div class="adventure_box">
+                        <img class="adventure_image" src="../images/{{ action.getId }}.jpg" alt="adventure image" />
+                        <p>{{ action.getName }}</p>
+                        <p> Cost:$ {{ action.getCost }}</p>
+                        <div class="adventure_activities">
+                            {% for event in action.getActivities %}
+                                <img class="adventure_activities_icons" src="../images/{{ event.getName }}.png" alt="Icon" />
+                            {% endfor %}
+                        </div>
+                    </div></a>
                 {% endfor %}
             </div>
 
