--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -9,6 +9,7 @@
         <div class="container">
             <div class="header">
                 <img id="banner" src="../images/banner.jpg" alt="banner"/>
+                <h1>Princess Adventures</h1>
                 <div class="navbar">
 
                 </div>
@@ -17,8 +18,10 @@
             <div class="main">
 
                 {% for action in adventures %}
-                    <a href="/adventure/{{ action.getId }}"><div class="adventure_box">
+                    <div class="adventure_box">
+                        <a href="/adventure/{{ action.getId }}">
                         <img class="adventure_image" src="../images/{{ action.getId }}.jpg" alt="adventure image" />
+                        </a>
                         <p>{{ action.getName }}</p>
                         <p> Cost:$ {{ action.getCost }}</p>
                         <div class="adventure_activities">
@@ -26,7 +29,7 @@
                                 <img class="adventure_activities_icons" src="../images/{{ event.getName }}.png" alt="Icon" />
                             {% endfor %}
                         </div>
-                    </div></a>
+                    </div>
                 {% endfor %}
             </div>
 
