Add rest of maps

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,6 +6,11 @@
     <body>
         <div class="container">
             <a href="/santiago">Santiago</a>
+            <a href="/sanjuan">SanJuan</a>
+            <a href="/denali">Denali</a>
+            <a href="/alps">Alps</a>
+            <a href="/australi">Australi</a>
+            <a href="/thailand">Thai</a>
         </div>
     </body>
 </html>
