--- a/views/adventure.html.twig
+++ b/views/adventure.html.twig
@@ -9,7 +9,6 @@
         <div class="container">
             <div class="header">
                 <img id="banner" src="../images/banner.jpg" alt="banner"/>
-                <h1>Princess Adventures</h1>
                 <div class="navbar">
                     <a href="/"><span>Home</span></a>
                     <span>Search</span>
@@ -18,28 +17,24 @@
                     <span>Cart</span>
                 </div>
             </div>
-
             <div class="main">
+                <h1>{{ adventure.getName() }}</h1>
+                <img class="adventure_image" src="../images/{{ adventure.getId }}.jpg" alt="adventure image" />
+                <h3>Description:</h3>
+                <p>
+                    {{ adventure.getDescription}}
+                </p>
 
-                {% for action in adventures %}
-                    <div class="adventure_box">
-                        <a href="/adventure/{{ action.getId }}">
-                        <img class="adventure_image" src="../images/{{ action.getId }}.jpg" alt="adventure image" />
-                        </a>
-                        <p><span class="adventure_name">{{ action.getName }}</span></p>
-                        <p> Cost: <span class="cost">${{ action.getCost }}</span></p>
-                        <div class="adventure_activities">
-                            {% for event in action.getActivities %}
-                                <img class="adventure_activities_icons" src="../images/{{ event.getName }}.png" alt="Icon" />
-                            {% endfor %}
-                        </div>
-                    </div>
+                <h3>Activities:</h3>
+                {% for event in adventure.getActivities %}
+                    <img class="adventure_activities_icons" src="../images/{{ event.getName }}.png" alt="Icon" />
+                    <p> {{ adventure.getActivityLevel(event) }}</p>
                 {% endfor %}
             </div>
-
             <div class="footer">
 
             </div>
+
         </div>
     </body>
 </html>
