--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -28,8 +28,9 @@
 .adventure_box {
     margin-left:100px;
     width: 300px;
+    height: 400px;
     padding: 10px;
-    display:inline-block;
+    float:left;
     text-align: center;
     border: 1px solid black;
 }
@@ -38,6 +39,9 @@
     width:200px;
     height: 200px;
     border-radius:240px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .adventure_activities {
@@ -59,6 +63,9 @@
     display:inline-block;
     /*padding: 20px 10px 20px 10px;*/
 }
+.navbar {
+    margin-top:20px;
+}
 
 .navbar .blank_nav {
     border: none;
@@ -73,4 +80,8 @@
 .adventure_name {
     font-weight: bold;
     font-size: 16pt;
+}
+
+h1 {
+    
 }
