--- a/views/thailand.html.twig
+++ b/views/thailand.html.twig
@@ -21,8 +21,8 @@ function initialize()
 
 
 var mapProp = {
-  center:Cottesloe,
-  zoom:7,
+  center:Bannister,
+  zoom:5,
   mapTypeId:google.maps.MapTypeId.ROADMAP
   };
 
@@ -49,7 +49,7 @@ var marker1=new google.maps.Marker({
 
 var marker2=new google.maps.Marker({
    position:Beaufort,
-   icon: culture
+   icon: ski
 
     });
 
@@ -77,7 +77,15 @@ marker3.setMap(map);
 marker4.setMap(map);
 marker5.setMap(map);
 
+var infowindow = new google.maps.InfoWindow({
+    content: "Thailand is fun."
+  });
 
+
+
+google.maps.event.addListener(marker, 'click', function() {
+  infowindow.open(map,marker);
+  });
 
 
 
