--- a/views/1306.html.twig
+++ b/views/1306.html.twig
@@ -1,11 +1,3 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-<script
-src="http://maps.googleapis.com/maps/api/js">
-</script>
-
 <script>
 var place =new google.maps.LatLng(48.506000, -122.677990);
 var place1 =new google.maps.LatLng (48.595088, -122.940288);
@@ -28,10 +20,10 @@ var mapProp = {
   };
 
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-var sail = 'sail.png'
-var kayak = 'kayak.png'
-var sightsee = 'sightsee.png'
-var bike = 'bike.png'
+var sail = '/sail.png'
+var kayak = '/kayak.png'
+var sightsee = '/sightsee.png'
+var bike = '/bike.png'
 
 var marker=new google.maps.Marker({
   position:place,
@@ -75,11 +67,6 @@ position:place7,
     icon:kayak
     });
 
-
-
-
-
-
 marker.setMap(map);
 marker1.setMap(map);
 marker2.setMap(map);
@@ -114,9 +101,5 @@ flightPath.setMap(map);
 
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
-</head>
 
-<body>
 <div id="googleMap" style="width:500px;height:380px;"></div>
-</body>
-</html>
