Add map feature in twig and clear up code.

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -15,7 +15,7 @@
                     <span>Search</span>
                     <span class="blank_nav"></span>
                     <span>Login</span>
-                    <span>Cart</span>
+                    <span><img src="/images/cart.png" alt="Cart" width="30" height="30"/></span>
                 </div>
             </div>
 
@@ -40,14 +40,6 @@
             <div class="footer">
 
             </div>
-
-            <a href="/santiago">Santiago</a>
-            <a href="/sanjuan">SanJuan</a>
-            <a href="/denali">Denali</a>
-            <a href="/alps">Alps</a>
-            <a href="/australi">Australi</a>
-            <a href="/thailand">Thai</a>
-
         </div>
     </body>
 </html>
