--- a/views/adventure.html.twig
+++ b/views/adventure.html.twig
@@ -32,21 +32,18 @@
                 <h3>Activities:</h3>
                 {% for event in adventure.getActivities %}
                     <img class="adventure_activities_icons" src="../images/{{ event.getName }}.png" alt="Icon" />
-                    <p> {{ adventure.getActivityLevel(event) }}</p>
+                    <p> Level: {{ adventure.getActivityLevel(event) }}</p>
                 {% endfor %}
+                <div class="map">
+                    {% include(map) %}
+                    <div id="googleMap" style="width:800px;height:380px;"></div>
+                </div>
 
             </div>
-            <div class="map">
-                {% include(map) %}
 
-
-
-
-            </div>
             <div class="footer">
 
             </div>
-
         </div>
     </body>
 </html>
