--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -61,15 +61,20 @@
     padding-top: 15px;
     border:1px solid black;
     display:inline-block;
-    /*padding: 20px 10px 20px 10px;*/
+    font-weight: bold;
+}
+
+.navbar span:hover{
+    background: grey;
 }
 .navbar {
     margin-top:20px;
 }
 
-.navbar .blank_nav {
+.navbar .blank_nav, .navbar .blank_nav:hover {
     border: none;
     width: 20%;
+    background: none;
 }
 
 .cost {
@@ -83,5 +88,20 @@
 }
 
 h1 {
+    text-align:center;
+}
 
+.map {
+    display: inline-block;
+    margin-left:50px;
+    border: 1px solid black;
+}
+
+.footer {
+
+}
+
+a {
+    color: black;
+    text-decoration: none;
 }
