new travel sql file.

--- a/views/admin.html.twig
+++ b/views/admin.html.twig
@@ -79,7 +79,7 @@
                 <form  action="/add_country" method="post">
                     <label for="Country">Add Country Name:</label>
                     <input type="text" name="name">
-                    <button class="btn btn-danger" type="submit">Create Country</button>
+                    <button class="btn btn-danger" type="submit">Create a Country</button>
                 </form>
             </div>
             <form action="/delete" method="post">
