--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -7,12 +7,12 @@
 
         <div class='container'>
             <div class='row'>
-                <div class='col-sm-2' name='x' id='x'>
+                <div class='col-sm-2' name='' id=''>
                 </div>
-                <div class='col-sm-8' name='x' id='x'>
+                <div class='col-sm-8' name='welcome' id='welcome'>
                     <img src="welcome.jpg" alt="Welcome!" style="width:480px;height:261px">
                 </div>
-                <div class='col-sm-2' name='x' id='x'>
+                <div class='col-sm-2' name='' id=''>
                 </div>
         </div>
         <div class='row'>
