--- a/views/profile.html.twig
+++ b/views/profile.html.twig
@@ -2,30 +2,42 @@
     <head>
         <title></title>
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-        <!-- <link rel="stylesheet" type="text/css" href="custom.css"> -->
-
+        <!-- <link rel="stylesheet" type="text/css" href="../css/custom.css"> -->
+        <style>
+        .pref { margin: 10;  }
+        </style>
     </head>
     <body>
         <div class='container'>
             <header>
-                <h2>Princess Adventures</h2>
+                <h2>Princess Adventures Banner</h2>
             </header>
             <div class="nav">
 
 
             </div>
             <div class="row">
-                <h1>USER PROFILE: NAME</h1><br>
+                <h1>USER PROFILE: NAME BANNER</h1><br>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="avatar.jpg" alt="Smiley face" style="width:300px;height:300px">
+                    <img src="avatar.jpg" alt="Smiley face" style="width:200px;height:200px">
                 </div>
                 <div class="col-md-6">
-                    <p>Main Stuff</p>
+                    <p>Adventure Prefs</p>
+                    <div class='pref'><img src='culture.png' alt='culture' style="width:50px;height:50px">
+                        <!-- <p class="glyphicon glyphicon-star" aria-hidden="true"> -->
+                        </p></div>
+                    <div class='pref'><img src='eat.png' alt='eat' style="width:50px;height:50px"></div>
+                    <div class='pref'><img src='hike.png' alt='hike' style="width:50px;height:50px"></div>
+                    <div class='pref'><img src='run.png' alt='run' style="width:50px;height:50px"></div>
+                    <div class='pref'><img src='sail.png' alt='sail' style="width:50px;height:50px"></div>
+                    <div class='pref'><img src='swim.png' alt='swim' style="width:50px;height:50px"></div>
                 </div>
                 <div class="col-md-2">
-                    <p>More stuff</p>
+                    <p>Adventure</p>
+
+
                 </div>
             </div>
             <div class="row">
