Some login function

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -14,7 +14,7 @@
                     <a href="/"><span>Home</span></a>
                     <span>Search</span>
                     <span class="blank_nav"></span>
-                    <span>Login</span>
+                    <a href="/login"><span>Login</span></a>
                     <span><img src="/images/cart.png" alt="Cart" width="30" height="30"/></span>
                 </div>
             </div>
