--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -20,7 +20,7 @@
         </div>
             <div class='row'><br>
                 <div class='col-sm-6' name='' id=''>
-                    <form id='signup' action='signup.php' method='post' accept-charset='UTF-8'>
+                    <form action='/profile' id='signup' method='post' accept-charset='UTF-8'>
                         <fieldset >
                         <legend>NEW User Sign-up</legend>
                         <input type='hidden' name='submitted' id='submitted' value='1'/>
@@ -38,7 +38,7 @@
                     </form>
                 </div>
                 <div class='col-sm-6' name='login' id='login'>
-                    <form action='login.php' id='login' method='post' accept-charset='UTF-8'>
+                    <form action='/login' id='login' method='post' accept-charset='UTF-8'>
                         <fieldset >
                         <legend>Member Login</legend>
                         <input type='hidden' name='submitted' id='submitted' value='1'/>
