--- a/views/adventure.html.twig
+++ b/views/adventure.html.twig
@@ -12,14 +12,14 @@
     <body>
         <div class="container">
             <div class="header">
-                <img id="banner" src="../images/banner.jpg" alt="banner"/>
-                <div class="navbar">
-                    <a href="/"><span>Home</span></a>
-                    <span>Search</span>
-                    <span class="blank_nav"></span>
-                    <span>Login</span>
-                    <span>Cart</span>
-                </div>
+                <h1>Princess Adventures</h1>
+            </div>
+            <div class="navbar">
+                <a href="/"><span>Home</span></a>
+                <span>Search</span>
+                <span class="blank_nav"></span>
+                <span>Login</span>
+                <span><img src="/images/cart.png" alt="Cart" width="30" height="30"/></span>
             </div>
             <div class="main">
                 <h1>{{ adventure.getName() }}</h1>
