--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -4,19 +4,20 @@
         <title>Princess Adventures</title>
 
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/css/styles.css" type="text/css" media="all">
+
     </head>
     <body>
         <div class="container">
             <div class="header">
-                <img id="banner" src="../images/banner.jpg" alt="banner"/>
                 <h1>Princess Adventures</h1>
-                <div class="navbar">
-                    <a href="/"><span>Home</span></a>
-                    <span>Search</span>
-                    <span class="blank_nav"></span>
-                    <a href="/login"><span>Login</span></a>
-                    <span><img src="/images/cart.png" alt="Cart" width="30" height="30"/></span>
-                </div>
+            </div>
+            <div class="navbar">
+                <a href="/"><span>Home</span></a>
+                <span>Search</span>
+                <span class="blank_nav"></span>
+                <a href="/login"><span>Login</span></a>
+                <span><img src="/images/cart.png" alt="Cart" width="30" height="30"/></span>
             </div>
 
             <div class="main">
