--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,29 +1,41 @@
-#banner {
+/*#banner {
     display: block;
     margin-left:auto;
     margin-right:auto;
     height:200px;
     width: 700px;
-}
+}*/
 
 .container {
     border: solid black 1px;
     width: 1100px;
-
 }
 
 .header {
     border:1px solid black;
     text-align:center;
-    width: 900px;
+    width: 1000px;
     margin:auto;
+    height: 300px;
 
+    background-image: url(http://www.csszengarden.com/214/contours.png), url(http://www.csszengarden.com/214/noise.png), url(http://www.csszengarden.com/214/gridlines.png), url(http://www.csszengarden.com/214/huntington.jpg);
+
+}
+
+.header h1 {
+    text-align:center;
+    font-size: 6em;
+    line-height: 3;
+    font-weight: 400;
+    font-style: italic;
+    font-family: Courier;
+    color: #FFFFCC;
 }
 
 .main {
     margin: auto;
     width:900px;
-    border:1px solid black;
+    margin-top: 3em;
 }
 .adventure_box {
     margin-left:100px;
@@ -54,6 +66,11 @@
     height: 35px;
 }
 
+.navbar {
+    width: 1000px;
+    margin:auto;
+    text-align:center;
+}
 .navbar span{
     float:left;
     width: 12em;
@@ -67,13 +84,11 @@
 .navbar span:hover{
     background: grey;
 }
-.navbar {
-    margin-top:20px;
-}
+
 
 .navbar .blank_nav, .navbar .blank_nav:hover {
     border: none;
-    width: 20%;
+    width: 326px;
     background: none;
 }
 
@@ -85,10 +100,6 @@
 .adventure_name {
     font-weight: bold;
     font-size: 16pt;
-}
-
-h1 {
-    text-align:center;
 }
 
 .map {
