--- a/views/adventure.html.twig
+++ b/views/adventure.html.twig
@@ -17,8 +17,8 @@
             <div class="navbar">
                 <a href="/"><span>Home</span></a>
                 <span>Search</span>
-                <span class="blank_nav"></span>
-                <span>Login</span>
+                <span class="blank_nav">{{name}}</span>
+                <a href="{{route}}"><span>{{text}}</span></a>
                 <span><img src="/images/cart.png" alt="Cart" width="30" height="30"/></span>
             </div>
             <div class="main">
