Update images to prepare for presentation.

--- a/views/script/1308.html.twig
+++ b/views/script/1308.html.twig
@@ -21,7 +21,7 @@ var mapProp = {
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 var sightsee = '/sightsee.png'
 var hike = '/hike.png'
-var ski = '/eat.png'
+var ski = '/images/ski.png'
 
 var marker=new google.maps.Marker({
   position:Kartausstrasse,
@@ -48,7 +48,7 @@ var marker3=new google.maps.Marker({
     });
 var marker4=new google.maps.Marker({
     position:Route_de_Bagnes,
-    icon:hike
+    icon:ski
 
     });
 
